--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"author": "T768D",
 	"main": "./src/main.mts",
 	"devDependencies": {
+		"@eslint/js": "^9.22.0",
 		"@types/bun": "latest",
 		"eslint": "^9.22.0",
+		"globals": "^16.0.0",
 		"typescript-eslint": "^8.27.0"
 	},
 	"peerDependencies": {
