--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
 		"moduleResolution": "nodenext",
 		"resolveJsonModule": true,
 		"declaration": true,
-		"sourceMap": true,
 		"outDir": "./dist/",
 		"removeComments": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"inlineSourceMap": true,
 		"noImplicitAny": true,
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
@@ -21,14 +21,15 @@
 		"alwaysStrict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"exactOptionalPropertyTypes": true,
+		"exactOptionalPropertyTypes": false,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitOverride": true,
 		"noPropertyAccessFromIndexSignature": false,
 		"allowUnusedLabels": false,
 		"allowUnreachableCode": false,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"allowJs": false
 	},
 	"include": [
 		"src/*",
@@ -38,9 +39,8 @@
 		"node_modules/*",
 		".vscode/*",
 		"buildTools/*",
-		"tests/*"
-	],
-	"hooks": [
-		"copy-files"
+		"tests/*",
+		"deploy/*",
+		".vscode/*"
 	]
 }
